@@ -1,8 +1,8 @@
 /*
  * This file is a part of BSL Language Server.
  *
- * Copyright © 2018-2020
- * Alexey Sosnoviy <labotamy@gmail.com>, Nikita Gryzlov <nixel2007@gmail.com> and contributors
+ * Copyright (c) 2018-2025
+ * Alexey Sosnoviy <labotamy@gmail.com>, Nikita Fedkin <nixel2007@gmail.com> and contributors
  *
  * SPDX-License-Identifier: LGPL-3.0-or-later
  *
@@ -22,9 +22,8 @@
 package com.github._1c_syntax.bsl.languageserver.diagnostics;
 
 import com.github._1c_syntax.bsl.languageserver.context.DocumentContext;
-import com.github._1c_syntax.bsl.languageserver.context.symbol.MethodDescription;
 import com.github._1c_syntax.bsl.languageserver.context.symbol.MethodSymbol;
-import com.github._1c_syntax.bsl.languageserver.diagnostics.metadata.DiagnosticInfo;
+import com.github._1c_syntax.bsl.languageserver.context.symbol.description.MethodDescription;
 import com.github._1c_syntax.bsl.languageserver.diagnostics.metadata.DiagnosticMetadata;
 import com.github._1c_syntax.bsl.languageserver.diagnostics.metadata.DiagnosticParameter;
 import com.github._1c_syntax.bsl.languageserver.diagnostics.metadata.DiagnosticSeverity;
@@ -34,7 +33,7 @@ import com.github._1c_syntax.bsl.languageserver.providers.CodeActionProvider;
 import com.github._1c_syntax.bsl.languageserver.recognizer.BSLFootprint;
 import com.github._1c_syntax.bsl.languageserver.recognizer.CodeRecognizer;
 import com.github._1c_syntax.bsl.parser.BSLParser;
-import com.github._1c_syntax.bsl.parser.Tokenizer;
+import com.github._1c_syntax.bsl.parser.BSLTokenizer;
 import org.antlr.v4.runtime.Token;
 import org.eclipse.lsp4j.CodeAction;
 import org.eclipse.lsp4j.CodeActionParams;
@@ -42,9 +41,12 @@ import org.eclipse.lsp4j.Diagnostic;
 import org.eclipse.lsp4j.TextEdit;
 
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 @DiagnosticMetadata(
@@ -68,21 +70,28 @@ public class CommentedCodeDiagnostic extends AbstractDiagnostic implements Quick
   )
   private float threshold = COMMENTED_CODE_THRESHOLD;
 
+  @DiagnosticParameter(
+    type = String.class
+  )
+  private Set<String> exclusionPrefixes = Collections.emptySet();
+
   private List<MethodDescription> methodDescriptions;
   private CodeRecognizer codeRecognizer;
 
-  public CommentedCodeDiagnostic(DiagnosticInfo info) {
-    super(info);
+  public CommentedCodeDiagnostic() {
     codeRecognizer = new CodeRecognizer(threshold, new BSLFootprint());
   }
 
   @Override
   public void configure(Map<String, Object> configuration) {
-    if (configuration == null) {
-      return;
-    }
-    threshold = (float) configuration.getOrDefault("threshold", threshold);
+    threshold = ((Number) configuration.getOrDefault("threshold", threshold)).floatValue();
     codeRecognizer = new CodeRecognizer(threshold, new BSLFootprint());
+
+    var excludePrefixesString = (String) configuration.getOrDefault("exclusionPrefixes", "");
+    exclusionPrefixes = Arrays.stream(excludePrefixesString.split(","))
+      .map(String::trim)
+      .filter(s -> !s.isEmpty())
+      .collect(Collectors.toSet());
   }
 
   @Override
@@ -129,11 +138,9 @@ public class CommentedCodeDiagnostic extends AbstractDiagnostic implements Quick
   }
 
   private boolean isAdjacent(Token comment, List<Token> currentGroup) {
-
-    Token last = currentGroup.get(currentGroup.size() - 1);
+    var last = currentGroup.get(currentGroup.size() - 1);
     return last.getLine() + 1 == comment.getLine()
       && onlyEmptyDelimiters(last.getTokenIndex(), comment.getTokenIndex());
-
   }
 
   private boolean onlyEmptyDelimiters(int firstTokenIndex, int lastTokenIndex) {
@@ -156,17 +163,17 @@ public class CommentedCodeDiagnostic extends AbstractDiagnostic implements Quick
       return true;
     }
 
-    final Token first = commentGroup.get(0);
-    final Token last = commentGroup.get(commentGroup.size() - 1);
+    final var first = commentGroup.get(0);
+    final var last = commentGroup.get(commentGroup.size() - 1);
 
     return methodDescriptions.stream().noneMatch(methodDescription -> methodDescription.contains(first, last));
   }
 
   private void checkCommentGroup(List<Token> commentGroup) {
-    Token firstComment = commentGroup.get(0);
-    Token lastComment = commentGroup.get(commentGroup.size() - 1);
+    var firstComment = commentGroup.get(0);
+    var lastComment = commentGroup.get(commentGroup.size() - 1);
 
-    for (Token comment : commentGroup) {
+    for (var comment : commentGroup) {
       if (isTextParsedAsCode(comment.getText())) {
         diagnosticStorage.addDiagnostic(firstComment, lastComment);
         return;
@@ -175,20 +182,27 @@ public class CommentedCodeDiagnostic extends AbstractDiagnostic implements Quick
   }
 
   private boolean isTextParsedAsCode(String text) {
+    var uncommented = uncomment(text);
+
+    for (var prefix : exclusionPrefixes) {
+      if (uncommented.startsWith(prefix)) {
+        return false;
+      }
+    }
     if (!codeRecognizer.meetsCondition(text)) {
       return false;
     }
 
-    Tokenizer tokenizer = new Tokenizer(uncomment(text));
-    final List<Token> tokens = tokenizer.getTokens();
+    var tokenizer = new BSLTokenizer(uncommented);
+    final var tokens = tokenizer.getTokens();
 
     // Если меньше двух токенов нет смысла анализировать - это код
     if (tokens.size() >= MINIMAL_TOKEN_COUNT) {
 
-      List<Integer> tokenTypes = tokens.stream()
+      var tokenTypes = tokens.stream()
         .map(Token::getType)
         .filter(t -> t != BSLParser.WHITE_SPACE)
-        .collect(Collectors.toList());
+        .toList();
 
       // Если два идентификатора идут подряд - это не код
       for (int i = 0; i < tokenTypes.size() - 1; i++) {
@@ -213,10 +227,10 @@ public class CommentedCodeDiagnostic extends AbstractDiagnostic implements Quick
     List<Diagnostic> diagnostics, CodeActionParams params, DocumentContext documentContext
   ) {
 
-    List<TextEdit> textEdits = diagnostics.stream()
+    var textEdits = diagnostics.stream()
       .map(Diagnostic::getRange)
       .map(range -> new TextEdit(range, ""))
-      .collect(Collectors.toList());
+      .toList();
 
     return CodeActionProvider.createCodeActions(
       textEdits,
