@@ -1,8 +1,8 @@
 /*
  * This file is a part of BSL Language Server.
  *
- * Copyright © 2018-2020
- * Alexey Sosnoviy <labotamy@gmail.com>, Nikita Gryzlov <nixel2007@gmail.com> and contributors
+ * Copyright (c) 2018-2025
+ * Alexey Sosnoviy <labotamy@gmail.com>, Nikita Fedkin <nixel2007@gmail.com> and contributors
  *
  * SPDX-License-Identifier: LGPL-3.0-or-later
  *
@@ -21,7 +21,6 @@
  */
 package com.github._1c_syntax.bsl.languageserver.diagnostics;
 
-import com.github._1c_syntax.bsl.languageserver.diagnostics.metadata.DiagnosticInfo;
 import com.github._1c_syntax.bsl.languageserver.diagnostics.metadata.DiagnosticMetadata;
 import com.github._1c_syntax.bsl.languageserver.diagnostics.metadata.DiagnosticSeverity;
 import com.github._1c_syntax.bsl.languageserver.diagnostics.metadata.DiagnosticTag;
@@ -30,6 +29,7 @@ import com.github._1c_syntax.bsl.languageserver.utils.DiagnosticHelper;
 import com.github._1c_syntax.bsl.languageserver.utils.Ranges;
 import com.github._1c_syntax.bsl.languageserver.utils.RelatedInformation;
 import com.github._1c_syntax.bsl.parser.BSLParser;
+import jakarta.annotation.PostConstruct;
 import org.antlr.v4.runtime.tree.ParseTree;
 import org.eclipse.lsp4j.DiagnosticRelatedInformation;
 
@@ -52,11 +52,11 @@ import java.util.stream.Collectors;
 )
 public class IfElseDuplicatedConditionDiagnostic extends AbstractVisitorDiagnostic {
 
-  private final String relatedMessage;
+  private String relatedMessage;
   private final Set<BSLParser.ExpressionContext> checkedConditions = new HashSet<>();
 
-  public IfElseDuplicatedConditionDiagnostic(DiagnosticInfo info) {
-    super(info);
+  @PostConstruct
+  public void init() {
     relatedMessage = this.info.getResourceString("identicalConditionRelatedMessage");
   }
 
@@ -85,22 +85,20 @@ public class IfElseDuplicatedConditionDiagnostic extends AbstractVisitorDiagnost
   }
 
   private void checkExpression(List<BSLParser.ExpressionContext> expressionContexts, int i) {
-    BSLParser.ExpressionContext currentExpression = expressionContexts.get(i);
+    var currentExpression = expressionContexts.get(i);
 
-    List<BSLParser.ExpressionContext> identicalExpressions = expressionContexts.stream()
+    var identicalExpressions = expressionContexts.stream()
       .skip(i)
       .filter(expressionContext ->
         !expressionContext.equals(currentExpression)
           && DiagnosticHelper.equalNodes(currentExpression, expressionContext))
-      .collect(Collectors.toList());
+      .toList();
 
     if (identicalExpressions.isEmpty()) {
       return;
     }
 
-    identicalExpressions.stream()
-      .collect(Collectors.toCollection(() -> checkedConditions));
-
+    identicalExpressions.stream().collect(Collectors.toCollection(() -> checkedConditions));
     List<DiagnosticRelatedInformation> relatedInformation = new ArrayList<>();
 
     relatedInformation.add(RelatedInformation.create(
@@ -121,6 +119,4 @@ public class IfElseDuplicatedConditionDiagnostic extends AbstractVisitorDiagnost
 
     diagnosticStorage.addDiagnostic(currentExpression, relatedInformation);
   }
-
 }
-
