@@ -1,8 +1,8 @@
 /*
  * This file is a part of BSL Language Server.
  *
- * Copyright © 2018-2020
- * Alexey Sosnoviy <labotamy@gmail.com>, Nikita Gryzlov <nixel2007@gmail.com> and contributors
+ * Copyright (c) 2018-2025
+ * Alexey Sosnoviy <labotamy@gmail.com>, Nikita Fedkin <nixel2007@gmail.com> and contributors
  *
  * SPDX-License-Identifier: LGPL-3.0-or-later
  *
@@ -21,7 +21,6 @@
  */
 package com.github._1c_syntax.bsl.languageserver.diagnostics;
 
-import com.github._1c_syntax.bsl.languageserver.diagnostics.metadata.DiagnosticInfo;
 import com.github._1c_syntax.bsl.languageserver.diagnostics.metadata.DiagnosticMetadata;
 import com.github._1c_syntax.bsl.languageserver.diagnostics.metadata.DiagnosticScope;
 import com.github._1c_syntax.bsl.languageserver.diagnostics.metadata.DiagnosticSeverity;
@@ -32,7 +31,6 @@ import com.github._1c_syntax.bsl.parser.BSLParser;
 import com.github._1c_syntax.utils.CaseInsensitivePattern;
 
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 @DiagnosticMetadata(
   type = DiagnosticType.ERROR,
@@ -42,7 +40,6 @@ import java.util.stream.Collectors;
   tags = {
     DiagnosticTag.STANDARD
   }
-
 )
 public class WrongUseOfRollbackTransactionMethodDiagnostic extends AbstractFindMethodDiagnostic {
 
@@ -50,8 +47,8 @@ public class WrongUseOfRollbackTransactionMethodDiagnostic extends AbstractFindM
     "ОтменитьТранзакцию|RollbackTransaction"
   );
 
-  public WrongUseOfRollbackTransactionMethodDiagnostic(DiagnosticInfo info) {
-    super(info, MESSAGE_PATTERN);
+  public WrongUseOfRollbackTransactionMethodDiagnostic() {
+    super(MESSAGE_PATTERN);
   }
 
   @Override
@@ -66,7 +63,7 @@ public class WrongUseOfRollbackTransactionMethodDiagnostic extends AbstractFindM
     var methodsList = Trees.findAllRuleNodes(parentNode, BSLParser.RULE_globalMethodCall).stream()
       .map(BSLParser.GlobalMethodCallContext.class::cast)
       .map(e -> e.methodName().getText())
-      .collect(Collectors.toList());
+      .toList();
 
     if (MESSAGE_PATTERN.matcher(ctx.methodName().getText()).matches()) {
       return methodsList.indexOf(ctx.methodName().getText()) != 0;
